Add Domain Test Classes